# dic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  n  winbuild.sh  winbuild_new.sh  winbuild_targets
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  rc.qrc
